# TestTask-dZENcode

./: README.md
server/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.dev.yaml  compose.prod.yaml  compose.yml  entrypoint.sh  manage.py  pyproject.toml
server/docs/database/: database_v1.mwb  database_v1.mwb.bak
server/env/: base.env.example  development.env.example  production.env.example
server/requirements/: deploy.txt  production.txt
server/server/: asgi.py  settings.py  urls.py  wsgi.py
server/server/apps/accounts/: apps.py  urls.py
server/server/apps/comments/: admin.py  apps.py  constants.py  consumers.py  enums.py  exceptions.py  filters.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
server/server/apps/comments/consumers/: __init__.py  comments.py
server/server/apps/comments/filters/: __init__.py  comments.py
server/server/apps/comments/migrations/: 0001_initial.py  0002_alter_comment_reply_to_and_more.py  0003_alter_commentattachment_file.py
server/server/apps/comments/models/: __init__.py  attachments.py  comments.py  likes.py
server/server/apps/comments/serializers/: __init__.py  attachments.py  comments.py  likes.py  replies.py
server/server/apps/comments/services/: __init__.py  attachments.py  comments.py  likes.py  replies.py
server/server/apps/comments/tests/: test_attachments.py  test_comments.py  test_consumers.py  test_likes.py  test_permissions.py  test_replies.py
server/server/apps/comments/views/: __init__.py  (+4 more)
server/server/apps/docs/: apps.py  urls.py  views.py
server/server/settings/: base.py  development.py  production.py
(+9 files in other folders)
