[tool.poetry]
name = "test-task"
version = "0.0.1"
description = "Test task for dZENcode"
authors = ["CrazyProger1 <crazyproger1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.5"
django-environ = "^0.11.2"
drf-yasg = "^1.21.7"
setuptools = "^69.5.1"
djangorestframework-simplejwt = "^5.3.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
